--- a/config/discord.yml
+++ b/config/discord.yml
@@ -1,3 +1,3 @@
-token:     <%= ENV["DISCORD_TOKEN"] %>
+token:     "<%= ENV["DISCORD_TOKEN"] %>"
 client_id: <%= ENV["DISCORD_CLIENT_ID"] %>
-prefix:    <%= ENV["DISCORD_PREFIX"] || "!" %>
+prefix:    "<%= ENV["DISCORD_PREFIX"] || "!" %>"
