Fix database connection in docker

--- a/config/database.yml
+++ b/config/database.yml
@@ -1,19 +1,8 @@
-<%
-require 'uri'
-ENV['DATABASE_URL'] ||= "postgres://postgres@localhost/fraggers_development"
-db_url = URI.parse(ENV['DATABASE_URL'])
-%>
-
 default: &default
-  adapter:  postgresql
-  username: <%= db_url.user %>
-  password: <%= db_url.password %>
-  host:     <%= db_url.host %>
-  port:     <%= db_url.port %>
-  database: <%= db_url.path.split('/')[1] %>
+  adapter: postgresql
   encoding: unicode
+  url: <%= ENV['DATABASE_URL'] %>
   pool: 5
-  timeout: 5000
 
 development:
   <<: *default
