Add webserver and youtube notification system

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,11 @@ services:
     ports:
       - "5432:5432"
 
+  redis:
+    image: "redis:3"
+    ports:
+      - "6379:6379"
+
   bot:
     build:
       context: .
