--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
-DISCORD_TOKEN="" 
+DISCORD_TOKEN=""
 DISCORD_CLIENT_ID=""
+DISCORD_PREFIX="!"
+REDIS_URL="redis://localhost:6380/0"
+DATABASE_URL="postgres://postgres@localhost:5432/fraggers_development"
