--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ DISCORD_CLIENT_ID=""
 DISCORD_PREFIX="!"
 REDIS_URL="redis://localhost:6380/0"
 DATABASE_URL="postgres://postgres@localhost:5432/fraggers_development"
+PUBSUB_CALLBACK="https://pubsub.example.com/youtube"
