Add youtube subscription scheduler

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 DISCORD_TOKEN=""
 DISCORD_CLIENT_ID=""
 DISCORD_PREFIX="!"
-REDIS_URL="redis://localhost:6380/0"
+REDIS_URL="redis://localhost:6379/0"
 DATABASE_URL="postgres://postgres@localhost:5432/fraggers_development"
-PUBSUB_CALLBACK="https://pubsub.example.com/youtube"
+WEBSUB_CALLBACK="https://pubsub.example.com/youtube"
+YOUTUBE_API_KEY=""
