--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 DISCORD_TOKEN=""
 DISCORD_CLIENT_ID=""
 DISCORD_PREFIX="!"
+DISCORD_ENV="development"
 REDIS_URL="redis://localhost:6379/0"
 DATABASE_URL="postgres://postgres@localhost:5432/fraggers_development"
 WEBSUB_CALLBACK="https://pubsub.example.com/youtube"
