Move webserver into separate repository
And organize YoutubeUpdate plugin

--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,4 @@ DISCORD_PREFIX="!"
 DISCORD_ENV="development"
 REDIS_URL="redis://localhost:6379/0"
 DATABASE_URL="postgres://postgres@localhost:5432/fraggers_development"
-WEBSUB_CALLBACK="https://pubsub.example.com/youtube"
-YOUTUBE_API_KEY=""
+WEBSUB_URL="http://localhost:9292/youtube"
