--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ DISCORD_ENV="development"
 REDIS_URL="redis://localhost:6379/0"
 DATABASE_URL="postgres://postgres@localhost:5432/fraggers_development"
 WEBSUB_URL="http://localhost:9292/youtube"
+# THREAD_ABORT_ON_EXCEPTION=1
